@@ -1,7 +1,7 @@
 <html>
   <body>
     <a href="/referer">Referer Servlet</a>
-    <a href="http://localhost/referer">Referer Servlet forced to http</a>
+    <a href="http://localhost/referer" name="foo">Referer Servlet forced to http</a>
     <a href="https://localhost/referer">Referer Servlet forced to https</a>
     <br />
     <a href="/referer" rel="noreferrer">Referer Servlet (noreferrer)</a>
