@@ -5,6 +5,8 @@
 * Bug fixes
   * Meta refresh URIs are now escaped (excluding %).  Issue #177
   * Fix charset name extraction.  Issue #180
+  * A Referer URI sent on request no longer includes user information
+    or fragment part.
 
 === 2.1 / 2011-12-20
 
